kubernetes/apps/kubeflow/volumes-web-app/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: volumes-web-app
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - kubeflow.goyangi.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /volumes
      backendRefs:
        - name: volumes-web-app
          port: 5000
